# GuideRobot

./: build.gradle  gradle.properties  settings.gradle
ArcFaceUtils/: build.gradle
ArcFaceUtils/src/main/: AndroidManifest.xml
ArcFaceUtils/src/main/res/values/: strings.xml
SerialPortLibrary/: CMakeLists.txt  build.gradle
SerialPortLibrary/src/androidTest/java/cn/tklvyou/serialportlibrary/: ExampleInstrumentedTest.java
SerialPortLibrary/src/main/: AndroidManifest.xml
SerialPortLibrary/src/main/java/cn/tklvyou/serialportlibrary/: BaudRateListConstants.kt  OriginalByteData.java  SerialPort.java
SerialPortLibrary/src/main/jni/: SerialPort.h  serialPort.c
SerialPortLibrary/src/test/java/cn/tklvyou/serialportlibrary/: ExampleUnitTest.java
UARTAIUICtr/: build.gradle
UARTAIUICtr/src/main/: AndroidManifest.xml
UARTKit/: CMakeLists.txt  build.gradle
UARTKit/src/main/: AndroidManifest.xml
UARTKit/src/main/cpp/: SerialPort.c  SerialPort.h
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: anim_loading.xml  button_style.xml  edittext_style.xml
app/src/main/res/layout/: activity_gmapping.xml  activity_main.xml  activity_pay.xml  activity_setting_nav_order.xml  activity_splash.xml  common_loading_indicator.xml  custom_input_view.xml  frame_loading_dialog.xml  item_log_info_layout.xml  item_rv.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
libusbcamera/: build.gradle
(+167 files in other folders)
